@@ -207,6 +207,14 @@ extern "C" {
     PSID usri23_user_sid;
   } USER_INFO_23,*PUSER_INFO_23,*LPUSER_INFO_23;
 
+  typedef struct _USER_INFO_24 {
+    BOOL usri24_internet_identity;
+    DWORD usri24_flags;
+    LPWSTR usri24_internet_provider_name;
+    LPWSTR usri24_internet_principal_name;
+    PSID usri24_user_sid;
+  } USER_INFO_24,*PUSER_INFO_24,*LPUSER_INFO_24;
+
   typedef struct _USER_INFO_1003 {
     LPWSTR usri1003_password;
   } USER_INFO_1003,*PUSER_INFO_1003,*LPUSER_INFO_1003;
